<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATM Informer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_activity_create_profile">ATM Informer</string>
    <string name="title_activity_view_profile">ATM Informer</string>
    <string name="title_activity_map">ATM Informer</string>
    
    <string name="load">Hello world!</string>
    <string name="name">Person Name</string>
    <string name="address">Postal Address</string>
    <string name="bankName">Bank Name</string>
    <string name="latitude">Location Latitude</string>
    <string name="longitude">Location Longitude</string>
    <string name="deposite">Is deposit available</string>
    <string name="personName">Contact Person Name</string>
    <string name="personNumber">Contact Person Mobile Number</string>
    <string name="save">Save Info</string>
    
    <string name="add">Add New Profile</string>
    <string name="edit">Edit Profile</string>
    <string name="delete">Delete Profile</string>
    <string name="back">back to Profile list</string>
    
    <string name="btn_text_camera">Take Photo From Gallery</string>
    
    <string name="title_activity_profile_view">ATM Informer</string>
    <string name="title_activity_update_profile">ATM Informer</string>
    <string name="title_activity_profile">ATM Informer</string>
    <string name="title_activity_photo_picker">ATM Informer</string>

</resources>
