<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    android:orientation="horizontal" >
    
   <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    
	    <ImageView
	        android:id="@+id/viewImage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:contentDescription="@string/load"/>
	    
    </LinearLayout>
    
	 <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
	    
	    <TextView
	        android:id="@+id/viewName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_light"
	        android:text="@string/name"/>
	            
	    <TextView
	        android:id="@+id/viewBankName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_light"
	        android:text="@string/bankName"/>
	    
	    
    </LinearLayout>
    
</LinearLayout>

